# gazebo_world_builder

./: .gitignore  CMakeLists.txt  README.md  model.sdf  package.xml
include/: mapImage.h  pbmMapImage.h  quadTree.h
launch/: empty.launch  empty.yaml  frames.gv  maze_high.yaml  maze_high_1.launch  maze_high_1_objs.csv  maze_high_2.launch  maze_high_2_objs.csv  maze_high_4.launch  maze_high_4_objs.csv  maze_low.yaml  maze_low_1.launch  maze_low_1_objs.csv  maze_low_2.launch  maze_low_2_objs.csv  maze_low_4.launch  maze_low_4_objs.csv  maze_spawn.gazebo.launch  model_spawn.gazebo.launch  road_net.launch  road_net.py  road_net.yaml  road_net2.launch  road_net2.yaml  road_net3.launch  road_net3.py  road_net3.yaml  road_spawn.gazebo.launch  roadnet.sh  roadnet1.sh  roadnet3.sh
maps/: empty.pbm  locs_high.csv  locs_low.csv  maze_high.pbm  maze_low.pbm  roadnet.pbm  roadnet2.pbm  roadnet2_old.pbm  roadnet2_rot180.pbm  roadnet3_blk.pbm  roadnet_rot90.pbm
maps/road_net_visual/: model.sdf
maps/road_net_visual/materials/scripts/: road_net_visual.material
models/: currentPioneer3at.sdf  pioneer3at.sdf  road_net.sdf  road_net2.sdf  road_net2_good.sdf  road_net_visual.sdf
models/fast_empty_world/: fast_empty.world  fast_empty_world.launch
models/husky/: model.config  model.sdf
models/husky_intruder/: model.config  model.sdf
models/husky_intruder/material/scripts/: husky_intruder.material
models/include_models/husky_good/: model.config  model.sdf
models/include_models/husky_intruder/: model.sdf
models/include_models/road_net_node_exit/: model.config  model.sdf
models/include_models/road_net_node_exit/materials/scripts/: road_net_node_exit.material
models/include_models/road_net_node_none/: model.config  model.sdf
models/include_models/road_net_node_none/materials/scripts/: road_net_node_none.material
models/include_models/road_net_node_sensor/: model.config  model.sdf
models/include_models/road_net_node_sensor/materials/scripts/: road_net_node_sensor.material
models/include_models/road_net_visual/: model.config  model.sdf
models/include_models/road_net_visual/materials/scripts/: road_net_visual.material
models/materials/scripts/: road_net_visual.material
models/node_info/: roadnet1_blk.json  roadnet3_blk.json
models/road_net_node/: model.config  model.sdf
models/road_net_node/materials/scripts/: road_net_node.material
models/road_net_sensor/: model.config  model.sdf
models/road_net_sensor/materials/scripts/: road_net_sensor.material
models/walled_world_models/: road_net2.sdf
pioneer_nav/: base_local_planner_params.yaml  costmap_common_params.yaml  frames.gv  global_costmap_params.yaml  global_costmap_params_intruder.yaml  local_costmap_params.yaml  local_costmap_params_intruder.yaml  move_base.launch  move_base_intruder.launch  pioneer_configuration.launch
scripts/: logData.sh
src/: extrudeWorld.cpp  getLocations.cpp  hero_pose_generator.py  intruderCaught  intruderCaught.py  intruder_pose_generator.py  model.sdf  pbmMapImage.cpp  quadTree.cpp  roadnet_sensor.py  stop_sim.py
