<?xml version="1.0"?>
<package>
  <name>gazebo_world_builder</name>
  <version>0.0.1</version>
  <description>
    COHRINT, Gazebo world generator
  </description>

  <maintainer email="brett.israelsen@colorado.edu">Brett Israelsen</maintainer>
  <maintainer email="sierra.williams@colorado.edu">Sierra Williams</maintainer>

  <license>Apache 2.0</license>

  <author>Brett Israelsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>move_base</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tinyxml</run_depend>

</package>
